--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
@@ -1,72 +1,108 @@
-<!--  -->
 <div class="container">
-    <h1 mat-dialog-title> {{ !this.data ? 'Add Expense' : 'Update Expense' }} </h1>
+    <h1 mat-dialog-title> {{ !this.data ? 'Add Create Quotation' : 'Update Create Quotation' }} </h1>
     <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-
-        <!-- Date start -->
-        <mat-form-field color="accent">
-            <mat-label>Date</mat-label>
-            <input matInput formControlName="date" [matDatepicker]="date">
-            <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
-            <mat-datepicker #date></mat-datepicker>
-        </mat-form-field>
-
-
-        <!-- Description start -->
+        <div class="box">
+            <!-- tier start -->
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Tier</mat-label>
+                    <input matInput formControlName="tier" disabled />
+                </mat-form-field>
+            </div>
+            <!-- Date start -->
+            <div class="width">
+                <mat-form-field color="accent">
+                    <mat-label>Date</mat-label>
+                    <input matInput formControlName="date" [matDatepicker]="date">
+                    <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
+                    <mat-datepicker #date></mat-datepicker>
+                </mat-form-field>
+            </div>
+            <!-- invoice_number start -->
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Invoice Number</mat-label>
+                    <input matInput formControlName="invoice_number" type="number" />
+                </mat-form-field>
+            </div>
+            <!-- ref name start -->
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Ref no</mat-label>
+                    <input matInput formControlName="ref_number" type="number" />
+                </mat-form-field>
+            </div>
+            <!-- button start -->
+            <div>
+                <button mat-raised-button color="primary" class="margin" type="submit">
+                    Download
+                </button>
+            </div>
+            <div>
+                <button mat-raised-button color="primary" type="submit">
+                    Upload
+                </button>
+            </div>
+        </div>
+        <mat-divider></mat-divider>
+        <!-- Item Name start -->
         <mat-form-field>
-            <mat-label>Description</mat-label>
-            <textarea matInput formControlName="description"></textarea>
+            <mat-label>Item Name</mat-label>
+            <input matInput formControlName="item_name" />
         </mat-form-field>
         <div>
             <ng-container *ngIf="
-        formGroup.controls.description.touched &&
-        !formGroup.controls.description.value
+        formGroup.controls.item_name.touched &&
+        !formGroup.controls.item_name.value
       ">
-                <span class="error">Description is Required</span>
+                <span class="error">Item Name is Required</span>
             </ng-container>
         </div>
-
         <!-- Category start -->
-        <mat-form-field>
+        <!-- <mat-form-field>
             <mat-label>Category</mat-label>
             <mat-select formControlName="user" name="user">
                 <mat-option *ngFor="let category of categories" [value]="category.id">
                     {{category.code}}
                 </mat-option>
             </mat-select>
-        </mat-form-field>
-
-        <!-- Amount start -->
+        </mat-form-field> -->
+        <!-- hashtag start -->
         <mat-form-field>
-            <mat-label>Amount</mat-label>
-            <input matInput formControlName="amount" type="number" />
+            <mat-label>#</mat-label>
+            <input matInput formControlName="hashtag" />
         </mat-form-field>
-        <div>
-            <ng-container *ngIf="
-          formGroup.controls.amount.touched &&
-          !formGroup.controls.amount.value
-        ">
-                <span class="error">Amount Balance is Required</span>
-
-            </ng-container>
-        </div>
-
-
-
-        <!-- user start -->
+        <!-- Qty start -->
         <mat-form-field>
-            <mat-label>User To</mat-label>
-            <mat-select formControlName="user" name="user">
-                <mat-option *ngFor="let user of users" [value]="user.id">
-                    {{user.user_name}}
-                </mat-option>
-            </mat-select>
+            <mat-label>Qty</mat-label>
+            <input matInput formControlName="qty" type="number" />
         </mat-form-field>
+        <!-- Available start -->
+        <mat-form-field>
+            <mat-label>Available</mat-label>
+            <input matInput formControlName="available" />
+        </mat-form-field>
+        <!-- Selling price start -->
+        <mat-form-field>
+            <mat-label>Selling price</mat-label>
+            <input matInput formControlName="selling_price" type="number" />
+        </mat-form-field>
+        <!-- total price start -->
+        <mat-form-field>
+            <mat-label>Total</mat-label>
+            <input matInput formControlName="total" />
+        </mat-form-field>
+        <!-- Add button start -->
+        <button mat-raised-button color="primary" class="margin" type="submit">
+            Add
+        </button>
+
+        <!-- button start -->
 
         <div class="btn-update">
             <button mat-raised-button color="primary" [disabled]="!formGroup.valid" type="submit">
                 <span>
-                    {{ !this.data ? 'Save' : 'Update' }}
+                    {{ !this.data ? 'Save & Back' : 'Update' }}
                 </span>
             </button>
         </div>
