--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
@@ -1,15 +1,25 @@
 .container {
     .mat-form-field {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
     }
-
     .mat-dialog-title {
-      margin: 0 0 20px;
-      display: block;
+        margin: 0 0 20px;
+        display: block;
     }
     .input {
-      width: 100%;
+        width: 100%;
     }
-  }
+    .margin {
+        margin-right: 10px;
+    }
+    .box {
+        display: flex;
+        .width {
+            width: 170px;
+            margin-right: 20px;
+
+        }
+    }
+}
