--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -10,7 +10,7 @@
                <mat-form-field class="margin">
                 <mat-label>Select Tier</mat-label>
                 <mat-select formControlName="tier" name="tier">
-                    <mat-option *ngFor="let tire of tires" [value]="tire.id">
+                    <mat-option *ngFor="let tire of tires" [(ngModel)]="tireValue" [value]="tire.id">
                         {{tire.name}}
                     </mat-option>
                 </mat-select>
@@ -21,7 +21,7 @@
                 Search
             </button>
 
-            <button color="primary" class="margin" mat-raised-button (click)="onAddNewCreateQuotation()">
+            <button color="primary" class="margin"  mat-raised-button (click)="onAddNewCreateQuotation()">
                 Add Create Qutation
             </button>
 
