--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -6,22 +6,24 @@
                 <mat-label>Search...</mat-label>
                 <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getItems()">
             </mat-form-field>
-               <!-- category start -->
-               <mat-form-field class="margin">
+            <!-- category start -->
+            <mat-form-field class="margin">
                 <mat-label>Select Tier</mat-label>
                 <mat-select formControlName="tier" name="tier">
-                    <mat-option *ngFor="let tire of tires" [(ngModel)]="tireValue" [value]="tire.id">
+                    <!-- <mat-option value="tireNameNone" [(ngModel)]="tireNameNone">All Tires{{tireNameNone}}</mat-option> -->
+                    <mat-option *ngFor="let tire of tires" [value]="tire.id" [(ngModel)]="tireName"
+                        (click)="toggleCreateButton()">
                         {{tire.name}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
 
-
             <button color="primary" class="margin" mat-raised-button (click)="getItems()">
                 Search
             </button>
 
-            <button color="primary" class="margin"  mat-raised-button (click)="onAddNewCreateQuotation()">
+            <button color="primary" class="margin" mat-raised-button *ngIf="!isShow"
+                (click)="onAddNewCreateQuotation()">
                 Add Create Qutation
             </button>
 
@@ -33,102 +35,87 @@
     </div>
     <br />
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company" matSortDirection="asc">
-
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
+            matSortDirection="asc">
             <ng-container matColumnDef="sr">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>SR</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.sr}}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.date }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="remarks">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Remarks</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.remarks}}
                 </td>
             </ng-container>
-
-
             <ng-container matColumnDef="qty">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Qty </th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.qty }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
                 <td mat-cell *matCellDef="let element">{{ element.amount | currency: 'INR' }}</td>
             </ng-container>
-
             <ng-container matColumnDef="shipping">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Shipping</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.shipping | currency: 'INR' }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="gst">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>GST</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.gst | currency: 'INR'}}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="total_due">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Due</th>
                 <td mat-cell *matCellDef="let element">{{ element.total_due | currency: 'INR'}}</td>
             </ng-container>
-
-
             <ng-container matColumnDef="tier">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Tier</th>
                 <td mat-cell *matCellDef="let element">{{ element.tier | currency: 'INR'}}</td>
             </ng-container>
-
-
-
             <ng-container matColumnDef="user">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
                 <td mat-cell *matCellDef="let element">{{ element.user | currency: 'INR' }}</td>
             </ng-container>
-
-
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewCustomers(element)">
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                        (click)="onEditNewCustomers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                        (click)="confirmDialog(element.id)">
                         <mat-icon aria-label="Delete">delete</mat-icon>
                     </button>
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="print">
                 <th mat-header-cell *matHeaderCellDef>Print</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button" (click)="onEditNewCustomers(element)">
-                        <mat-icon  aria-label="PRINT" color="primary">print</mat-icon>
+                    <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button"
+                        (click)="onEditNewCustomers(element)">
+                        <mat-icon aria-label="PRINT" color="primary">print</mat-icon>
                     </button>
-
                 </td>
             </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
-
-        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+            (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
     </div>
 </div>
