--- a/frontend/src/app/layout/cdf/cdf.component.html
+++ b/frontend/src/app/layout/cdf/cdf.component.html
@@ -23,15 +23,98 @@
             </mat-slide-toggle>
         </div>
     </div>
-    <!-- Unverified bar start -->
-        <div>
-            <mat-tab-group mat-align-tabs="start">
-                <mat-tab label="Unverified"> <app-unverified-cdf></app-unverified-cdf></mat-tab>
+    <!-- table bar start -->
 
-              </mat-tab-group>
+ <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
+            matSortDirection="asc">
 
-        </div>
+            <ng-container matColumnDef="company">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
+                <td mat-cell *matCellDef="let element">
+                    <b> {{ element.company  | uppercase }} </b> <br> {{ element.date | date:'d/M/y' }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+                <td mat-cell *matCellDef="let element">
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let element">
+                    <b> {{ element.name | uppercase  }} </b> <br> {{ element.email }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+                <td mat-cell *matCellDef="let element">
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="reference">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Reference </th>
+                <td mat-cell *matCellDef="let element">
+                    <b> {{ element.reference | uppercase  }}</b> <br> {{ element.reference_person }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="reference_person">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+                <td mat-cell *matCellDef="let element">
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="brands">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Brands </th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.brands  }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="display_names">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Display Names</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.display_names }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="platforms">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Platforms</th>
+                <td class="width" mat-cell *matCellDef="let element">{{ element.platforms  | titlecase }} </td>
+            </ng-container>
+            <ng-container matColumnDef="address">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
+                <td mat-cell *matCellDef="let element">{{ element.address }}</td>
+            </ng-container>
+            <ng-container matColumnDef="mobile">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Mobile</th>
+                <td mat-cell *matCellDef="let element">{{ element.mobile }}</td>
+            </ng-container>
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+                <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+            </ng-container>
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <td mat-cell *matCellDef="let element">
+                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
+                        type="button" (click)="onEditNewCdf(element)">
+                        <mat-icon aria-label="Edit">thumb_up</mat-icon>
+                    </button>
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                        color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                        <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+        </table>
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+            (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        </mat-paginator>
+    </div> -->
+
     <br />
 
 
 </div>
+
+
+
