--- a/frontend/src/app/layout/cdf/cdf.component.html
+++ b/frontend/src/app/layout/cdf/cdf.component.html
@@ -10,6 +10,14 @@
             <button color="primary" class="margin" mat-raised-button (click)="getCdf()">
                 Search
             </button>
+            <mat-form-field class="margin">
+                <mat-label>Select CDF</mat-label>
+                <mat-select name="cdf" [(ngModel)]="customerStatus">
+                    <mat-option *ngFor="let cdf of cdfes"  [value]="cdf.value">
+                        {{cdf.value}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
             <button color="primary" class="margin" mat-raised-button (click)="onAddNewCdf()">
                 Add CDF
             </button>
@@ -25,14 +33,14 @@
     </div>
     <!-- table bar start -->
 
- <div class="mat-elevation-z8">
+    <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
             matSortDirection="asc">
 
             <ng-container matColumnDef="company">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
                 <td mat-cell *matCellDef="let element">
-                    <b> {{ element.company  | uppercase }} </b> <br> {{ element.date | date:'d/M/y' }}
+                    <b> {{ element.company | uppercase }} </b> <br> {{ element.date | date:'d/M/y' }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="date">
@@ -43,7 +51,7 @@
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
                 <td mat-cell *matCellDef="let element">
-                    <b> {{ element.name | uppercase  }} </b> <br> {{ element.email }}
+                    <b> {{ element.name | uppercase }} </b> <br> {{ element.email }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="email">
@@ -54,7 +62,7 @@
             <ng-container matColumnDef="reference">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Reference </th>
                 <td mat-cell *matCellDef="let element">
-                    <b> {{ element.reference | uppercase  }}</b> <br> {{ element.reference_person }}
+                    <b> {{ element.reference | uppercase }}</b> <br> {{ element.reference_person }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="reference_person">
@@ -65,7 +73,7 @@
             <ng-container matColumnDef="brands">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Brands </th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.brands  }}
+                    {{ element.brands }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="display_names">
@@ -76,7 +84,7 @@
             </ng-container>
             <ng-container matColumnDef="platforms">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Platforms</th>
-                <td class="width" mat-cell *matCellDef="let element">{{ element.platforms  | titlecase }} </td>
+                <td class="width" mat-cell *matCellDef="let element">{{ element.platforms | titlecase }} </td>
             </ng-container>
             <ng-container matColumnDef="address">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
@@ -95,12 +103,17 @@
                 <td mat-cell *matCellDef="let element">
                     <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
                         type="button" (click)="onEditNewCdf(element)">
-                        <mat-icon aria-label="Edit">thumb_up</mat-icon>
+                        <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
                     <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
                         color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
                         <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                     </button>
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                        color="{{tableParams.active? 'warn': 'primary'}}" (click)="confirmDialog(element.id)">
+                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    </button>
+
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -115,6 +128,3 @@
 
 
 </div>
-
-
-
