--- a/frontend/src/app/layout/cdf/cdf.component.html
+++ b/frontend/src/app/layout/cdf/cdf.component.html
@@ -12,9 +12,10 @@
             </button>
             <mat-form-field class="margin">
                 <mat-label>Select CDF</mat-label>
-                <mat-select name="cdf" (selectionChange)="onCdfStatusChange($event)" [value]="'Unverified'"
-                    [(ngModel)]="customerStatus">
-                    <mat-option *ngFor="let cdf of cdfes" [value]="cdf.value">
+                <mat-select name="cdf" (selectionChange)="onCdfStatusChange($event)"
+                 [value]="'Unverified'" [(ngModel)]="customerStatus">
+                    <mat-option *ngFor="let cdf of cdfes" [value]="cdf.value"
+                     (click)="isHideActionButton()">
                         {{cdf.value}}
                     </mat-option>
                 </mat-select>
@@ -26,7 +27,6 @@
                 <mat-icon>cloud_download</mat-icon>
                 Download
             </button>
-
         </div>
         <div>
             <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
@@ -34,11 +34,9 @@
         </div>
     </div>
     <!-- table bar start -->
-
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
             matSortDirection="asc">
-
             <ng-container matColumnDef="company">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
                 <td mat-cell *matCellDef="let element">
@@ -103,8 +101,7 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <ng-container>
-
+                    <div *ngIf="isShowActionButton">
                         <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
                             type="button" (click)="onEditNewCdf(element)">
                             <mat-icon aria-label="Edit">edit</mat-icon>
@@ -123,9 +120,10 @@
                         <button mat-icon-button color="primary" (click)="changeCdfStatus(element.id)">
                             <mat-icon>thumb_up</mat-icon>
                         </button>
-
-                    </ng-container>
-
+                    </div>
+                    <div *ngIf="check" class="color">
+                        <mat-icon >check</mat-icon>
+                    </div>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -135,8 +133,5 @@
             (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
     </div>
-
     <br />
-
-
 </div>
